--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
     <title>Template</title>
     <!--Template adapted from https://www.freecodecamp.org/news/basic-html5-template-boilerplate-code-example/ -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <nav>
-        <div id="logo"><em>Tea42</em></div>
-        <ul>
-          <li>Tea</li>
-          <li>Pots</li>
-          <li>About</li>
-        </ul>
-        <input type="button" value="Sign Up" />
-      </nav>
+      <div>
+        <nav>
+          <div id="logo"><em>Tea42</em></div>
+          <ul>
+            <li>Tea</li>
+            <li>Pots</li>
+            <li>About</li>
+          </ul>
+          <input type="button" value="Sign Up" />
+        </nav>
+      </div>
       <section>
         <h1>Welcome to Tea42</h1>
-        <p>Hic litteras ad cum convallis sinistras, natus contemptor sem
-          symbola consequatur</p>
+        <p>Hic litteras ad cum convallis sinistras, natus contemptor sem symbola consequatur</p>
       </section>
     </header>
     <section id="selection">
@@ -34,48 +38,58 @@
         </fieldset>
         <fieldset>
           <legend>Type of pots</legend>
-          <label><input type="radio" name="type" id="all" value="all" checked /> All</label><br />
-          <label><input type="radio" name="type" id="lorm" value="lorem" /> Green tea</label><br />
+          <label><input type="radio" name="type" id="all" value="all" checked /> All</label>
+          <label><input type="radio" name="type" id="lorm" value="lorem" /> Green tea</label>
           <label><input type="radio" name="type" id="ipsum" value="ipsum" /> Black tea</label>
         </fieldset>
       </form>
     </section>
     <section id="cards">
       <h2>Our Tea Pots</h2>
-      <div class="card">
-        <div class="card_media">
-          <img src="imgs/tea01.jpeg" />
+      <article id="cards-container">
+        <div class="card">
+          <div class="card_media">
+            <img src="imgs/tea01.jpeg" />
+          </div>
+          <div class="card_text">
+            <h3>Fremilut nobis me absoluto</h3>
+            <p>Hic litteras ad cum convallis sinistras, natus contemptor sem symbola.</p>
+          </div>
+          <div class="flex-row">
+            <input type="button" value="Learn more" />
+            <input type="button" value="Buy pot" />
+          </div>
         </div>
-        <div class="card_text">
-          <h3>Fremilut nobis me absoluto</h3>
-          <p>Hic litteras ad cum convallis sinistras, natus contemptor sem symbola.</p>
-          <input type="button" value="Learn more" />
-          <input type="button" value="Buy pot" />
+        <div class="card">
+          <div class="card_media">
+            <img src="imgs/tea02.jpeg" />
+          </div>
+          <div class="card_text">
+            <h3>Usus lius eu mauris reclamente et sed concilia</h3>
+            <p>
+              Electionem modestius sed faucibus dignus porta recordatio temporis veritatis at m solenniter, sunt-massa
+              memorabilem.
+            </p>
+          </div>
+          <div class="flex-row">
+            <input type="button" value="Learn more" />
+            <input type="button" value="Buy pot" />
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <div class="card_media">
-          <img src="imgs/tea02.jpeg" />
+        <div class="card">
+          <div class="card_media">
+            <img src="imgs/tea03.jpeg" />
+          </div>
+          <div class="card_text">
+            <h3>Quod eorum ad</h3>
+            <p>Quam usus ullo leo magnatibus gaudere ac.</p>
+          </div>
+          <div class="flex-row">
+            <input type="button" value="Learn more" />
+            <input type="button" value="Buy pot" />
+          </div>
         </div>
-        <div class="card_text">
-          <h3>Usus lius eu mauris reclamente et sed concilia</h3>
-          <p>Electionem modestius sed faucibus dignus porta recordatio temporis veritatis at m solenniter, sunt-massa memorabilem.</p>
-          <input type="button" value="Learn more" />
-          <input type="button" value="Buy pot" />
-        </div>
-      </div>
-      <div class="card">
-        <div class="card_media">
-          <img src="imgs/tea03.jpeg" />
-        </div>
-        <div class="card_text">
-          <h3>Quod eorum ad</h3>
-          <p>Quam usus ullo leo magnatibus gaudere ac.
-          </p>
-          <input type="button" value="Learn more" />
-          <input type="button" value="Buy pot" />
-        </div>
-      </div>
+      </article>
     </section>
   </body>
 </html>
